<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_monitor</name>
  <version>0.1.0</version>
  <description> System monitoring tools for ROS </description>
  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>
  <license>GNU Lesser General Public License (LGPL)</license>
  <url>http://github.com/ethz-asl/ros-system-monitor</url>
  <author>Ralf Kaestner</author>
  <author>Jerome Maye</author>
  <!-- <buildtool_depend>ament_python</buildtool_depend> -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>sysstat</exec_depend>
  <!-- <exec_depend>hddtemp</exec_depend> -->
  <exec_depend>ntpdate</exec_depend>
  <exec_depend>ifstat</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
